--- a/index.html
+++ b/index.html
@@ -193,11 +193,15 @@ p{ margin:10px auto}
 <div id="div_news">
 <p class="Bolder"><!--img src="icons/news-banner.png" width="25" height="25" border="0"/--> What's New</p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed), deadline: <span class="red">April 2024</span> </span></p>
+
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"The 11th IEEE International Conference on Big Data Computing and Communications (BigCom 2025)"</a>  deadline: <span class="red">3rd March 2025</span> </span></p>
+
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"The 16th IEEE Joint Cloud Conference (JCC 2025)"</a>  deadline: <span class="red">15th April 2025</span> </span></p>
+
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">14 October 2024</span> </span></p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) Two new 36-month projects awarded (PI) by National Key Research and Development Programme and National *** Fellowship Programme. A few PhD Student and Postdoc positions will open soon! </span> Drop me emails if you are interested... </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) Two new 36-month projects awarded (PI) by National Key R&D Programme and National *** Fellowship Programme. A few PhD Student and Postdoc positions will open soon! </span> Drop me emails if you are interested... </span></p>
 
 <p><span class="style11"> 
 <p><span class="style11"> (10/12/2024) Our work on optimized pareto front of hypernetwork has been accepted by AAAI 2025. Big congrats to Hui!</span></p>
@@ -219,7 +223,7 @@ p{ margin:10px auto}
 
 <p class="Bolder"><!--img src="icons/bio-banner.png" width="25" height="25" border="0"/--> Short Bio</p> 
 
-<p><span class="style11"> I am an Associate Professor and Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab) at Beihang University, China. 
+<p><span class="style11"> I am an Associate Professor at Beihang University where I co-found and co-direct the Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab). 
 	Before moving back to Beijing, I was based in the UK as a lead Research Fellow funded by the UK EPSRC (2020-2023), 
 	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a> 
 	and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, both at the 
@@ -242,7 +246,7 @@ p{ margin:10px auto}
 	Alibaba and Beihang University. 
 </span>
 
-<p><span class="style11"> I am currently acting as an associate editor of ACM Computing Surveys, and on the program committees of many conferences, 
+<p><span class="style11"> I am currently acting as an associate editor of ACM Computing Surveys and CCF Computer Engineering and Design Journal, and on the program committees of many conferences, 
 	including IJCAI, ECAI, AAAI, CLOUD, etc., I was also the program/area chair of multiple conferences. 
 </span>
 
@@ -281,7 +285,9 @@ p{ margin:10px auto}
 
 <p><span class="Bolder"><!--img src="icons/job-banner.png" width="25" height="25" border="0"/--> Work Experience</span></p>
 
-<p><span class="style11">&bull; 2023.5 - present: &nbsp; Associate Professor, School of Software, Beihang University, Beijing, China</span></p>
+<p><span class="style11">&bull; 2024.10 - now: &nbsp; Tenured Associate Professor, School of Software, Beihang University, Beijing, China</span></p>
+
+<p><span class="style11">&bull; 2023.5 - 2024.9: &nbsp; Associate Professor, School of Software, Beihang University, Beijing, China</span></p>
 
 <p><span class="style11">&bull; 2020.9 - 2023.4: &nbsp; Lead Research Fellow, University of Leeds, Leeds, UK</span></p> 
 
@@ -307,45 +313,25 @@ p{ margin:10px auto}
 
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
 
-<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  <a href="paper/eurosys2025.pdf" style="text-decoration: none">SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications</a>. ACM EuroSys 2025 <span class="red">(CCF A)</span></span></p>
+<p><span class="style11">&bull; <a href="paper/eurosys2025.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications</a>. ACM EuroSys 2025 <span class="red">(CCF A)</span></span></p>
 
-<p><span class="style11">&bull; H. Wang, R. Yang, J. Sun, H. Peng, X. Mou, T. Wo and X. Liu. <a href="paper/aaai2025.pdf" style="text-decoration: none">IOP: An Idempotent-Like Optimization Method on the Pareto Front of Hypernetwork</a>. AAAI 2025 <span class="red">(CCF A)</span></span></p>
+<p><span class="style11">&bull; <a href="paper/aaai2025.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> IOP: An Idempotent-Like Optimization Method on the Pareto Front of Hypernetwork</a>. AAAI 2025 <span class="red">(CCF A)</span></span></p>
 
-<p><span class="style11">&bull; Z. Liu, R. Yang, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. <a href="paper/socc2024-kale.pdf" style="text-decoration: none">KALE: Elastic GPU Scheduling for Online DL Model Training</a>. ACM SoCC 2024 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
+<p><span class="style11">&bull; <a href="paper/socc2024-kale.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> KALE: Elastic GPU Scheduling for Online DL Model Training</a>. ACM SoCC 2024 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
 
-<p><span class="style11">&bull; R. Wang, X. Mou, R. Yang, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
+<p><span class="style11">&bull; <a href="paper/kdd2024-cap.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
 
-<p><span class="style11">&bull; Y. Yang, Q. Wu, B. He, H. Peng, R. Yang, Z. Hao, Y. Liao. <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
+<p><span class="style11">&bull; <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
 
-<p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. <a href="paper/icde2024.pdf" style="text-decoration: none">LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy</a>. IEEE ICDE 2024 <span class="red">(CCF A)</span> </span></p>
+<p><span class="style11">&bull; <a href="paper/icde2024.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy</a>. IEEE ICDE 2024 <span class="red">(CCF A)</span> </span></p>
 
-<p><span class="style11">&bull; Z. Wen, R. Yang, B. Qian, Z. Wang, H. Peng, J. Xu, A.Y. Zomaya, R. Ranjan. <a href="paper/tsc2023.pdf" style="text-decoration: none">Janus: Latency-Aware Traffic Scheduling for IoT Data Streaming in Edge Environments</a>. IEEE TSC 2023 <span class="red">(CCF A)</span> </span></p>
+<p><span class="style11">&bull; <a href="paper/www2023-fedack.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection</a>. ACM WWW 2023 <span class="red">(CCF A)</span> </span></p>
 
-<p><span class="style11">&bull; D. Zou, H. Peng, X. Huang, R. Yang, J. Li, J. Wu, C. Liu, P. S. Yu. <a href="paper/www2023-segsl.pdf" style="text-decoration: none">SE-GSL: A General and Effective Graph Structure Learning Framework through Structural Entropy Optimization</a>. ACM WWW 2023  <span class="red">(CCF A)</span> </span></p>
+<p><span class="style11">&bull; <a href="paper/sc2022.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 <span class="red">(CCF A)</span> </span></p>
 
-<p><span class="style11">&bull; Y. Yang, R. Yang, Y. Li, H. Peng, T. Li, Y. Liao, P. Zhou. <a href="paper/www2023-fedack.pdf" style="text-decoration: none">FedACK: Federated Adversarial Contrastive Knowledge Distillation for Cross-Lingual and Cross-Model Social Bot Detection</a>. ACM WWW 2023 <span class="red">(CCF A)</span> </span></p>
+<p><span class="style11">&bull; <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>. IEEE TPDS 2022 <span class="red">(CCF A)</span> </span></p>
 
-<p><span class="style11">&bull; J. Zhu, R. Yang, X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters</a>. IEEE TPDS 2022 <span class="red">(CCF A)</span> </span></p>
-
-<p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 <span class="red">(CCF A)</span> </span></p>
-
-<p><span class="style11">&bull; G. Yeung, B. Borowiec, R. Yang, A. Friday, R. Harper, P. Garraghan. <a href="paper/tpds2021-horus.pdf" style="text-decoration: none">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE TPDS 2021 <span class="red">(CCF A)</span></span></p>
-
-<p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE TKDE 2021 <span class="red">(CCF A)</span> </span></p>
-
-<p><span class="style11">&bull; Y. Hei, R. Yang, H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. <a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE TNNLS 2021 <span class="red">(CAAI A/CORE A*, IF14.255)</span></span></p>
-
-<p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P. S. Yu, A. Y. Zomaya, R. Ranjan. <a href="paper/tc2021.pdf" style="text-decoration: none">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>. IEEE TC 2021 <span class="red">(CCF A)</span></span></p>
-
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. <a href="paper/tois2021-riognn.pdf" style="text-decoration: none">Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks</a>. ACM TOIS 2021 <span class="red">(CCF A)</span></span></p>
-
-<p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE TPDS 2020 <span class="red">(CCF A)</span></span></p>
-
-<p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. IEEE TPDS 2019 <span class="red">(CCF A)</span></span></p>
-
-<p><span class="style11">&bull; X. Sun, C. Hu, R. Yang, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 <span class="red">(CCF B/CORE A)</span> ACM SOSP 2017 poster <span class="red">(CCF A)</span></span></p>
-
-<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y.Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf" style="text-decoration: none">Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover.</a> IEEE TSC 2017 <span class="red">(CCF A)</span> </span></p>
+<p><span class="style11">&bull; <a href="paper/tpds2021-horus.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE TPDS 2021 <span class="red">(CCF A)</span></span></p>
 
 <p><span class="style11">&bull; <strong>More publications</strong>: 
 <a href="publications.html" style="text-decoration: none">[Complete List]</a> 
@@ -432,21 +418,26 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="Bolder"><!--img src="icons/supervision-banner.png" width="25" height="25" border="0"/--> Research Team </span></p>
 
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
-<p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Rui Wang (2021.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24, FCS'24, ICASSP'23, SDM'23  </span></p> 
+<p><span class="style11">&bull; Hui Wang (2021.9- , BeihangU, w/ Prof. Xudong Liu): AAAI'25, ICME'24, ICASSP'23 </span></p>
+<p><span class="style11">&bull; <a href="https://williamericcheung.github.io/" style="text-decoration: none">Yihui Zhang</a> (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; Jinghao Wang (2023.9- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
+<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, w/ Prof. Chunming Hu) </span></p> 
 <p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering) </span></p> 
-<p><span class="style11">&bull; Rui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24, FCS'24, ICASSP'23, SDM'23  </span></p> 
-<p><span class="style11">&bull; Hui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): AAAI'25, ICME'24, ICASSP'23 </span></p>
-<p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
-<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, w/ Prof. Chunming Hu) </span></p> 
+<p><span class="style11">&bull; Zhuoren Ye (2024.12- , BeihangU, w/ Prof. Tianyu Wo) </span></p> 
+<p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU) </span></p> 
 </div>
 
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
-<p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2023] Zhida Jiang, <a href="https://mondaycha.github.io/" style="text-decoration: none">Yilong Li</a>, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Mingming Zhang, Yujie Wang, Yuxuan Chen (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
 <p><span class="style11">&bull; [Class 2025] Yitang Yang</span></p>
 <p><span class="style11">&bull; [Part Time] Yao Zhang, Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang </span></p>
+
+<p><span class="style11"><strong>Undergraduate Research Assistants</strong> </span></p>
+<p><span class="style11">&bull; Kairui Zhang, Yihui Gong, Danyang Wu, Huitian Xue, Yao Yin, Longchun Zhao, Yuxi Luo, Yanxiang Chen </span></p>
+
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
 
@@ -514,7 +505,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <div id="div_misc">
 <p><span class="Bolder"><!--img src="icons/misc-banner.png" width="25" height="25" border="0"/--> Misc</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
-<p><span class="style11"> Outside of work, I am a super fan of football and really enjoy <img src="icons/running.png" width="15" height="15" border="0"/> long-distance running, <img src="icons/calligraphy.png" width="15" height="15" border="0"/> traditional chinese calligraphy, <img src="icons/architecture.png" width="15" height="15" border="0"/> architectural design, <img src="icons/cooking.png" width="15" height="15" border="0"/> cooking world wide foods, and <img src="icons/music.png" width="15" height="15" border="0"/> pop music.
+<p><span class="style11"> Outside of work, I am a super big fan of <img src="icons/football.jpeg" width="15" height="15" border="0"/> football and football/manager video games, and really enjoy <img src="icons/running.png" width="15" height="15" border="0"/> long-distance running, <img src="icons/calligraphy.png" width="15" height="15" border="0"/> traditional chinese calligraphy, <img src="icons/architecture.png" width="15" height="15" border="0"/> architectural design, <img src="icons/cooking.png" width="15" height="15" border="0"/> cooking world wide foods, and <img src="icons/music.png" width="15" height="15" border="0"/> pop music.
 </span></p>
 </div>
 
