--- a/news.html
+++ b/news.html
@@ -76,6 +76,8 @@ p{ margin:10px auto}
 <body>
 <p><span class="Bolder">Events</span></p>
 
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed), deadline: <span class="red">April 2024</span> </span></p>
+
 <p><span class="style11"> (20/07/2024) Our work on GNN-based resource estimation for microservices received the best paper award of IEEE JCC 2024.  Congrats to Jinghao! </span></p>
 
 <p><span class="style11"> (17/05/2024) Two papers are accepted by ACM KDD 2024. Big congrats to Rui, Xudong and Yingguang! </span></p>
