--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ p{ margin:10px auto}
 <p class="Bolder"><!--img src="icons/news-banner.png" width="25" height="25" border="0"/--> What's New</p>
 
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"The 11th IEEE International Conference on Big Data Computing and Communications (BigCom 2025)"</a>  deadline: <span class="red">3rd March 2025</span> </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="https://www.bigcom2025.com/index.html" style="text-decoration: none">"The 11th IEEE International Conference on Big Data Computing and Communications (BigCom 2025)"</a>  deadline: <span class="red">3rd March 2025</span> </span></p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"The 16th IEEE Joint Cloud Conference (JCC 2025)"</a>  deadline: <span class="red">15th April 2025</span> </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="https://conf.researchr.org/track/cisose-2025/jcc-2025" style="text-decoration: none">"The 16th IEEE Joint Cloud Conference (JCC 2025)"</a>  deadline: <span class="red">15th April 2025</span> </span></p>
 
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">14 October 2024</span> </span></p>
