--- a/alumni.html
+++ b/alumni.html
@@ -104,6 +104,8 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 
 <p><span class="style11"><strong> Former PhD Students/Postdocs </strong></span></p>
+<p><span class="style11">&bull; Rui Wang (2022.9-2025.6, BeihangU, w/ Prof. Xudong Liu, first employment Researcher at Zhongguancun Lab): KDD'24, FCS'24, ICASSP'23, SDM'23 </span></p> 
+<p><span class="style11">&bull; Hui Wang (2022.9-2025.6, BeihangU, w/ Prof. Xudong Liu, first employment Postdoc at Beihang Hangzhou Institute): AAAI'25, ICME'24, ICASSP'23 </span></p>
 <p><span class="style11">&bull; Yingguang Yang (2021.7-2024.12, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): IJCAI'24, KDD'24, TWEB'23, WWW'23 </span></p>
 <p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clement Mommessin (Postdoc, 2021.1-2023.4, UoLeeds) </span></p>
 <p><span class="style11">&bull; Dr. Qi Shen (Postdoc, 2017.9-2019.8, BeihangU): JPDC'20 </span></p>
@@ -120,9 +122,10 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 
 <p><span class="style11"><strong> Former MSc. Students (by Research) @BeihangU </strong></span></p> 
+<p><span class="style11">&bull; Yao Zhang (2023.9 - 2025.5, first employment at iFLYTEK)
 <p><span class="style11">&bull; Weihan Jiang (2022.9 - 2024.12, co-supervised w/ Prof. Tianyu Wo, first employment at ByteDance) </span></p>
 <p><span class="style11">&bull; Tianyu Ye (2022.9 - 2024.12,co-supervised w/ Prof. Tianyu Wo, first employment at Alibaba) </span></p>
-<p><span class="style11">&bull; Ziyang Liu (2022.9 - 2024.12,co-supervised w/ Prof. Chunming Hu) </span></p>
+<p><span class="style11">&bull; Ziyang Liu (2022.9 - 2024.12,co-supervised w/ Prof. Chunming Hu， first employment at CASIC) </span></p>
 <p><span class="style11">&bull; Yuanfeng Luo (2022.9 - 2024.12, co-supervised w/ Prof. Chunming Hu, current employment at Meituan) </span></p>
 <p><span class="style11">&bull; Tao Yan (2021.9-2023.12, co-supervised w/ Prof. Tianyu Wo, first employment at Alibaba) </span></p>
 <p><span class="style11">&bull; Pexi Li (2021.9-2023.12, co-supervised w/ Prof. Chunming Hu, first employment at ByteDance)</span></p> 
