--- a/index.html
+++ b/index.html
@@ -420,15 +420,15 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="Bolder"><!--img src="icons/supervision-banner.png" width="25" height="25" border="0"/--> Research Team </span></p>
 
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
-<p><span class="style11">&bull; Rui Wang (2021.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24, FCS'24, ICASSP'23, SDM'23  </span></p> 
-<p><span class="style11">&bull; Hui Wang (2021.9- , BeihangU, w/ Prof. Xudong Liu): AAAI'25, ICME'24, ICASSP'23 </span></p>
 <p><span class="style11">&bull; <a href="https://williamericcheung.github.io/" style="text-decoration: none">Yihui Zhang</a> (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.9- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
-<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, part time, w/ Prof. Chunming Hu) </span></p> 
 <p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU) </span></p> 
-<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
-<p><span class="style11">&bull; Zhuoren Ye (2024.12- , BeihangU, w/ Prof. Tianyu Wo) </span></p> 
 <p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Wang Xiong (2025.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Zhuoren Ye (2025.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p> 
+<p><span class="style11">&bull; Dinghao Xue (2025.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
+<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, part time, w/ Prof. Chunming Hu) </span></p> 
+<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
 <p><span class="style11">&bull; Dawei Gao (2025.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
 <p><span class="style11">&bull; Runnan Gu (2025.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
 </div>
@@ -436,8 +436,8 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, <a href="https://mondaycha.github.io/" style="text-decoration: none">Yilong Li</a>, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Mingming Zhang, Yujie Wang (w/ Prof. Tianyu Wo/Chunming Hu)</span></p>
-<p><span class="style11">&bull; [Class 2025] Yitang Yang, Xi Wang, Zhuocheng Ge</span></p>
-<p><span class="style11">&bull; [Part Time] Yao Zhang, Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang </span></p>
+<p><span class="style11">&bull; [Class 2025] Yitang Yang, Xi Wang, Zhuocheng Ge, TinHang Alix Hui</span></p>
+<p><span class="style11">&bull; [Part Time] Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang, Lubo Yang, Xiang Li</span></p>
 
 <p><span class="style11"><strong>Undergraduate Research Assistants</strong> </span></p>
 <p><span class="style11">&bull; Kairui Zhang, Yihui Gong, Danyang Wu, Huitian Xue, Yao Yin, Longchun Zhao, Yuxi Luo, Yanxiang Chen </span></p>
