--- a/index.html
+++ b/index.html
@@ -193,14 +193,6 @@ p{ margin:10px auto}
 <div id="div_news">
 <p class="Bolder"><!--img src="icons/news-banner.png" width="25" height="25" border="0"/--> What's New</p>
 
-
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="https://www.bigcom2025.com/index.html" style="text-decoration: none">"The 11th IEEE International Conference on Big Data Computing and Communications (BigCom 2025)"</a>  deadline: <span class="red">3rd March 2025</span> </span></p>
-
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="https://conf.researchr.org/track/cisose-2025/jcc-2025" style="text-decoration: none">"The 16th IEEE Joint Cloud Conference (JCC 2025)"</a>  deadline: <span class="red">15th April 2025</span> </span></p>
-
-
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">14 October 2024</span> </span></p>
-
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) Two new 36-month projects awarded (PI) by National Key R&D Programme and National *** Fellowship Programme. A few PhD Student and Postdoc positions will open soon! </span> Drop me emails if you are interested... </span></p>
 
 <p><span class="style11"> 
@@ -475,8 +467,10 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
 <p><span class="style11">&bull; Review Editor@Editorial Board: Frontiers in Big Data, Frontiers in High Performance Computing  </span></p>
 
-<p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC), 2025, 2020, 2019 </span></p>
-
+<p><span class="style11">&bull; External Reviewer, China National Science Foundation </span></p>
+<p><span class="style11">&bull; External Reviewer, China National Science and Technology Awards </span></p>
+<p><span class="style11">&bull; External Reviewer, Research Grants Council (RGC) of Hong Kong </span></p>
+<p><span class="style11">&bull; Technical Program Chair: IEEE International Conference on Joint Cloud Computing (JCC), 2025, 2020, 2019 </span></p>
 <p><span class="style11">&bull; Area/Track Chair: International Conference on Big Data Computing and Communications (BigCom) 2025, IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
 <p><span class="style11">&bull; PC Member: IJCAI, ECAI, AAAI, ICCV, CLOUD, UCC, HPCC, etc. </span></p>
@@ -487,9 +481,11 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><!--img src="icons/award-banner.png" width="25" height="25" border="0"/-->Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
+<p><span class="style11">&bull; The 2025 Key Software Technology Innovation Achievement Award (2025年度关键软件技术创新成果奖), 2025 </p>
+
 <p><span class="style11">&bull;	  <strong>China National  *** Fellowship</strong>, 2024 </p>
 
-<p><span class="style11">&bull;	  <strong>The First Class Scientific and Technological Progress Award</strong>, China General Chamber of Commerce, 2024 (2024年中国商业联合会科学进步一等奖) </p>
+<p><span class="style11">&bull;	  <strong>The First Class Scientific and Technological Progress Award</strong>, China General Chamber of Commerce (2024年中国商业联合会科学进步一等奖), 2024 </p>
 
 <p><span class="style11">&bull;	  <strong>Best Paper Award</strong> of IEEE Joint Cloud Conference (JCC), 2024 </p>
 
@@ -497,8 +493,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull;   <strong>IEEE Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
 
-<p><span class="style11">&bull;   <strong>The Grand Class of Scientific and Technological Progress Award </strong>, Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
-<p><span class="style11">&bull;   The State Scientific and Technological Progress Award, 1st Prize Nominee, 2018 (2018年度国家科学进步一等奖提名) </p>
+<p><span class="style11">&bull;   <strong>The Grand Class of Scientific and Technological Progress Award </strong>, Chinese Institute of Electronics (2017年度中国电子学会科技进步特等奖), 2017 </p>
 
 <p><span class="style11">&bull;  <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
 <p><span class="style11">&bull;  <strong>Guanghua Scholarship Award </strong> for outstanding students, 2014 </p>
